--- a/temario.html
+++ b/temario.html
@@ -40,11 +40,11 @@
                     <br>
                     <p class="unidad">Unidad 2</p>
                     <br>
-                    <li>La derivada parcial</li>
+                    <li><a href="temas/unidad2/derivada_parcial.html">La derivada parcial</a></li>
                     <br>
-                    <li>Vector gradiente y derivada direccional</li>
+                    <li><a href="temas/unidad2/vector.html">Vector gradiente y derivada direccional</a></li>
                     <br>
-                    <li>Extremos de funciones multivariables</li>
+                    <li><a href="temas/unidad2/extremos.html">Extremos de funciones multivariables</a></li>
                     <br>
                     <p class="unidad">Unidad 3</p>
                     <br>
