--- a/temas/unidad1/funciones.html
+++ b/temas/unidad1/funciones.html
@@ -82,15 +82,16 @@
                         <br>
                         <li><a href="../../temas/unidad1/planos.html">Planos y superficies</a></li>
                         <br>
-                        <li><a href="../../temas/unidad1/limites.html">Limites y continuidad en funciones de 3 variables</a></li>
+                        <li><a href="../../temas/unidad1/limites.html">Limites y continuidad en funciones de 3
+                                variables</a></li>
                         <br>
                         <p class="unidad">Unidad 2</p>
                         <br>
-                        <li><a href="">La derivada parcial</a></li>
+                        <li><a href="../../temas/unidad2/derivada_parcial.html">La derivada parcial</a></li>
                         <br>
-                        <li><a href="">Vector gradiente y derivada direccional</a></li>
+                        <li><a href="../../temas/unidad2/vector.html">Vector gradiente y derivada direccional</a></li>
                         <br>
-                        <li><a href="">Extremos de funciones multivariables</a></li>
+                        <li><a href="../../temas/unidad2/extremos.html">Extremos de funciones multivariables</a></li>
                         <br>
                         <p class="unidad">Unidad 3</p>
                         <br>
