--- a/temas/unidad2/vector.html
+++ b/temas/unidad2/vector.html
@@ -3,14 +3,15 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Unidad 1</title>
+    <title>Unidad 2</title>
     <link rel="stylesheet" type="text/css" href="../../css/temas.css" />
 </head>
+
 <body>
     <div id="general">
         <header id="header">
             <h1>
-                UNIDAD 1
+                UNIDAD 2
             </h1>
         </header>
         <nav id="menu">
@@ -24,88 +25,60 @@
             <div class="clearfix"></div>
         </nav>
         <section id="contenido">
-            <h1>PLANOS Y SUPERFICIES</h1>
+            <h1>VECTOR GRADIENTE Y DERIVADA DIRECCIONAL</h1>
             <div class="caja">
                 <div class="texto">
-                    PLANOS
+                    VECTOR GRADIENTE.
+                </div>
+                <br>
+                <div class="texto">
+                    Se llama gradiente de una función z = f(x, y) en un punto P(x, y)
+                    al vector que sale del punto P y sus componentes son las derivadas parciales de la función en dicho punto
                 </div>
                 <div class="texto">
-                    El plano tiene dos dimensiones: longitud y anchura.
-                    Un plano se representa mediante un paralelogramo de lados menores oblicuos.
-                    Se designan mediante letras griegas: α (alfa), β (beta)...
-                </div>
-                <div class="texto">
-                    Los planos vienen determinados por:
-                </div>
-                <div class="texto">
-                    3 puntos no alineados. 
-                </div>
-                <div class="texto">
-                    Dos rectas que se cortan
-                </div>
-                <div class="texto">
-                    Dos rectar paralelas
-                </div>
-                <div class="texto">
-                    Un punto y una recta
-                </div>
-                <div class="texto">
-                    Cualquier plano puede representarse mediante la ecuación:
-                </div>
-                <div class="texto">
-                    ax + by + cz + d = 0 , donde a, b, c y d son constantes reales.
+                    El gradiente indica el sentido de crecimiento más rápido de una función en un punto dado. 
+                    La derivada direccional tiene su valor máximo en el sentido del gradiente y coincide con su módulo:
                 </div>
                 <div class="imagen">
-                    <p style="text-align: center; "> <img src="../../imagenes/unidad 1/planos.JPG" alt="imagen 1" width="400" height="200"></p>
+                    <p style="text-align: center; "> <img src="../../imagenes/unidad 2/gradiente.JPG" alt="imagen 1"
+                            width="300" height="200"></p>
                 </div>
                 <div class="texto">
-                    SUPERFICIES CUADRÁTICAS
+                    Cuando las entradas de una función f viven en más de dos dimensiones, 
+                    ya no es tan cómodo ver su gráfica como un terreno montañoso. 
+                    Dicho eso, la misma idea subyacente se mantiene. Ya sea que el espacio de entradas de f se bidimensional,
+                     tridimensional o de 1,000,000 de dimensiones, el gradiente
+                     de f da el vector en ese espacio de entrada que apunta en la dirección 
+                     que hace que f crezca más rápido.
+                </div>
+                <br>
+                <div class="texto">
+                   DERIVADA DIRECCIONAL.
                 </div>
                 <div class="texto">
-                    Este tipo de superficies en el espacio son las análogas a las secciones cónicas en R2.
+                    La derivada direccional de una función multivariable sobre un vector dado,
+                     representa la tasa de cambio de la función en la dirección de dicho vector. Este concepto generaliza
+                    a las derivadas parciales, ya que estas son derivadas direccionales en los vectores paralelos a los ejes.
+                 </div>
+                 <div class="texto">
+                    La noción geométrica de la derivada direccional se puede entender a partir de la idea de la pendiente de la recta tangente
+                     a las curvas de intersección de una superficie con el plano vertical que contiene a la dirección dada.
+                 </div>
+                 <div class="imagen">
+                    <p style="text-align: center; "> <img src="../../imagenes/unidad 2/direccional.JPG" alt="imagen 1"
+                            width="300" height="200"></p>
                 </div>
-                <div class="texto">
-                    La forma general de una superficie cuádrica es:
-                </div>
-                <div class="texto">
-                    Ax2 + By2 + Cz2 + Dxy + Exz + Fyz + Gx+ Hy + Iz + J = 0
-                </div>
-                <div class="texto">
-                    Hay seis tipos básicos de superficies cuádricas: elipsoide, hiperboloide de una hoja, 
-                    hiperboloide de dos hojas, cono elíptico, paraboloide y paraboloide hiperbólico.
-                </div>
-                <div class="imagen">
-                    <p style="text-align: center; "> <img src="../../imagenes/unidad 1/elipsoide.JPG" alt="imagen 1" width="600" height="200"></p>
-                </div>
-                <div class="imagen">
-                    <p style="text-align: center; "> <img src="../../imagenes/unidad 1/hiperboloide.JPG" alt="imagen 1" width="600" height="200"></p>
-                </div>
-                <div class="imagen">
-                    <p style="text-align: center; "> <img src="../../imagenes/unidad 1/cono eliptico.JPG" alt="imagen 1" width="600" height="200"></p>
-                </div>
-                <div class="imagen">
-                    <p style="text-align: center; "> <img src="../../imagenes/unidad 1/paraboloide eliptico.JPG" alt="imagen 1" width="600" height="200"></p>
-                </div>
-            </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
         </section>
+
+
+
+
+
+
+
+
+
+
         <aside id="lateral">
             <div class="caja">
                 <h2>TEMARIO</h2>
