--- a/referencias.html
+++ b/referencias.html
@@ -30,6 +30,10 @@
                 <p class="titulo">Contenidos</p>
                 <ul class="lista">
                     <br>
+
+
+
+
                     <p class="unidad">Unidad 1</p>
                     <br>
                     <li>Funciones escalares de varias variables</li>
@@ -88,15 +92,83 @@
                         Continuidad | Calculisto - Resúmenes y Clases de Cálculo. (s. f.). Recuperado 12 de abril de 2021.
                     </a>
                     </p>
+
+
+
+
                     <br>
                     <p class="unidad">Unidad 2</p>
                     <br>
                     <li>La derivada parcial</li>
                     <br>
+                    <p class="link"><a href="https://es.khanacademy.org/math/multivariable-calculus/multivariable-derivatives/partial-derivative-and-gradient-articles/a/introduction-to-partial-derivatives">
+                        Introducción a las derivadas parciales (artículo). (s. f.). Recuperado 13 de abril de 2021.
+                    </a>
+                    </p>
+                    <br>
+                    <p class="link"><a href="https://www.universoformulas.com/matematicas/analisis/derivadas-parciales/">
+                        Serra, B. R. (2020, noviembre 12). Derivadas parciales. Recuperado 13 de abril de 2021.
+                    </a>
+                    </p>
+                    <br>
+                    <p class="link"><a href="https://sites.google.com/site/carreradevidaguillermocova/home/unidad-ii-derivada/la-derivada-como-razon-de-cambio-instantanea">
+                        La derivada como razón de cambio instantánea - Cálculo Diferencial Profr. Guillermo CoVa. (s. f.). Recuperado 13 de abril de 2021.
+                    </a>
+                    </p>
+                    <br>
+                    <p class="link"><a href="https://sites.google.com/site/iqiandrade/tercer-parcial/la-derivada-como-una-razon-de-cambio">
+                        La derivada como una razón de cambio - Portafolio digital de Matemáticas 1. (s. f.). Recuperado 13 de abril de 2021.
+                    </a>
+                    </p>
+                    <br>
+                    <p class="link"><a href="https://www.sangakoo.com/es/temas/derivadas-parciales">
+                        Maths, S. (s. f.). Derivadas parciales. Recuperado 13 de abril de 2021.
+                    </a>
+                    </p>
+                    <br>
+                    <p class="link"><a href="https://sites.google.com/site/calculovectorialhakim/derivadas-parciales">
+                        Derivadas parciales - Diario de Cálculo Vectorial. (s. f.). Recuperado 13 de abril de 2021.
+                    </p>
+                    <br>
+                    <p class="link"><a href="https://www.analyzemath.com/spanish/calculus/Differentiation/rules.html">
+                        Reglas de Diferenciación de Funciones en Cálculo. (s. f.). Recuperado 13 de abril de 2021
+                    </p>
+                    <br>
+                    <p class="link"><a href="https://sites.google.com/site/frabicaciondelatasdecervezam2/3-contenidos/derivacion-parcial-implicita">
+                        Derivación parcial implicita - Fabricación de latas de cerveza m2. (s. f.). Recuperado 13 de abril de 2021.
+                    </p>
+                    <br>
+                    <p class="link"><a href="https://www.fisicalab.com/apartado/regla-cadena">
+                        Regla de la cadena-Fisicalab. (s. f.). Recuperado 13 de abril de 2021.
+                    </p>
+                    <br>
                     <li>Vector gradiente y derivada direccional</li>
+                    <br>
+                    <p class="link"><a href="https://es.khanacademy.org/math/multivariable-calculus/multivariable-derivatives/partial-derivative-and-gradient-articles/a/the-gradient">
+                        El gradiente (artículo). (s. f.). Recuperado 13 de abril de 2021.
+                    </p>
+                    <br>
+                    <p class="link"><a href="https://es.khanacademy.org/math/multivariable-calculus/multivariable-derivatives/partial-derivative-and-gradient-articles/a/directional-derivative-introduction">
+                        Las derivadas direccionales (introducción) (artículo). (s. f.). Recuperado 13 de abril de 2021.
+                    </p>
+                    <br>
+                    <p class="link"><a href="https://sites.google.com/site/calculovectorial2015lp1/3er-parcial/vector-gradiente">
+                        Vector gradiente - Calculo Vectorial. (s. f.). Recuperado 13 de abril de 2021.
+                    </p>
+                    <br>
+                    <p class="link"><a href="http://prometeo.matem.unam.mx/recursos/Licenciatura/UNADM_Adapt//scorm_player/1212/content/escenas/2_Inicio_1.html">
+                        DEFINICION ALGEBRAICA DE DERIVADA DIRECCIONAL. (s. f.). Recuperado 13 de abril de 2021.
+                    </p>
                     <br>
                     <li>Extremos de funciones multivariables</li>
                     <br>
+
+
+
+
+
+
+
                     <p class="unidad">Unidad 3</p>
                     <br>
                     <li>Integral doble y triple</li>
@@ -120,7 +192,7 @@
 
     <div class="clearfix"></div>
     <footer>
-        <p class="pie">Fernando Hernandez Vazquez | Fernando Perez Suarez</p>
+        <p class="pie">Fernando Hernandez Vazquez</p>
     </footer>
 </body>
 
