--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	</div>
 </body>
 <footer>
-	<p id="pie">Fernando Hernandez Vazquez | Fernando Perez Suarez</p>
+	<p id="pie">Fernando Hernandez Vazquez</p>
 </footer>
 
 </html>
