--- a/referencias.html
+++ b/referencias.html
@@ -162,6 +162,14 @@
                     <br>
                     <li>Extremos de funciones multivariables</li>
                     <br>
+                    <p class="link"><a href="https://sites.google.com/site/calculovectorial2015lp1/3er-parcial/extremos-de-funciones-de-varias-variables">
+                        Extremos de funciones de varias variables - Calculo Vectorial. (s. f.). Recuperado 13 de abril de 2021.
+                    </p>
+                    <br>
+                    <p class="link"><a href="https://www.matesfacil.com/UNI/varias_variables/extremos/extremos-varias-variables.html">
+                        EXTREMOS: MAXIMOS, MINIMOS, PUNTOS CRITICOS, DE INFLEXION: FUNCIONES DE VARIAS VARIABLES: CALCULO DIFERENCIAL: UNIVERSIDAD. (s. f.). Recuperado 13 de abril de 2021.
+                        </a></p>
+                    <br>
 
 
 
