--- a/temario.html
+++ b/temario.html
@@ -49,7 +49,7 @@
                     <br>
                     <p class="unidad">Unidad 3</p>
                     <br>
-                    <li>Integral doble y triple</li>
+                    <li><a href="temas/unidad3/integral.html">Integral doble y triple</a></li>
                     <br>
                     <li>Area de regiones generales</li>
                     <br>
