--- a/referencias.html
+++ b/referencias.html
@@ -181,6 +181,24 @@
                     <br>
                     <li>Integral doble y triple</li>
                     <br>
+                    <p class="link"><a href="https://www.giematic.unican.es/index.php/integracion-multiple/triple-sobre-cajas/calculo-integrales-iteradas">
+                        Cálculo. Integrales iteradas. (s. f.). Recuperado 13 de abril de 2021.
+                        </a></p>
+                        <br>
+                        <p class="link"><a href="https://sites.google.com/site/integralesdobles1/integral-doble/integral-iterada">
+                            Integral Iterada - INTEGRALES DOBLES. (s. f.). Recuperado 13 de abril de 2021.
+                            </a></p>
+                    <br>
+                    <br>
+                        <p class="link"><a href="https://es.khanacademy.org/math/multivariable-calculus/integrating-multivariable-functions/double-integrals-a/a/double-integrals">
+                            Integrales dobles (artículo). (s. f.). Recuperado 13 de abril de 2021.
+                            </a></p>
+                    <br>
+                    <br>
+                        <p class="link"><a href="https://www.youtube.com/watch?v=i5A_sjgo5hk">
+                            Agustin. (2015, 19 febrero). Cálculo de integrales dobles usando el teorema de Fubini. YouTube
+                            </a></p>
+                    <br>
                     <li>Area de regiones generales</li>
                     <br>
                     <li>Volumenes</li>
