--- a/temario.html
+++ b/temario.html
@@ -51,7 +51,7 @@
                     <br>
                     <li><a href="temas/unidad3/integral.html">Integral doble y triple</a></li>
                     <br>
-                    <li>Area de regiones generales</li>
+                    <li><a href="temas/unidad3/regiones.html">Area de regiones generales</a></li>
                     <br>
                     <li>Volumenes</li>
                     <br>
