--- a/temas/unidad3/volumenes.html
+++ b/temas/unidad3/volumenes.html
@@ -25,49 +25,43 @@
             <div class="clearfix"></div>
         </nav>
         <section id="contenido">
-            <h1>REGIONES GENERALES</h1>
+            <h1>VOLUMENES</h1>
             <div class="caja">
                 <div class="texto">
-                    Si deseas integrar sobre una región en el plano xy, y que no sea rectangular, 
-                    necesitas expresar cada uno de los límites de integración de la integral interior 
-                    como una función de la variable exterior.
+                    A riesgo de sonar obvio, las integrales triples son
+                    como integrales dobles, pero en tres dimensiones. Están escritas de manera abstracta como
                 </div>
                 <div class="imagen">
-                    <p style="text-align: center; "> <img src="../../imagenes/unidad 3/regiones.JPG" alt="imagen 1"
-                            ></p>
-                <br>
-                </div>
-                <div class="texto">
-                    Encuentra una fórmula para las rebanadas usando una integral.
-                    Utiliza una segunda integral para sumar ese infinito número de rebanadas hasta volverlas un volumen.
-                </div>
-                <div class="texto">
-                    Esto significa que cuando construimos una integral para encontrar 
-                    el área de una de estas rebanadas de valor xxx constante, escribimos el límite superior en términos de x.
+                    <p style="text-align: center; "> <img src="../../imagenes/unidad 3/integral volumen.JPG"
+                            alt="imagen 1"></p>
                 </div>
                 <br>
                 <div class="texto">
-                    REGION TIPO I
-                </div>
-                <div class="texto">
-                    Son las regiones continuas en x, lo que significa que solo necesitamos 2 valores (inicial y final)
-                    de esa variable a y b.
-                    Graficamente, una región genérica de este tipo es asi:
+                    Graficamente representado como:
                 </div>
                 <div class="imagen">
-                    <p style="text-align: center; "> <img src="../../imagenes/unidad 3/tipo2.JPG" alt="imagen 1"></p>
-                <br>
-                <div class="texto">
-                    REGION TIPO II
+                    <p style="text-align: center; "> <img src="../../imagenes/unidad 3/grafico volumen.JPG"
+                            alt="imagen 1"></p>
                 </div>
                 <div class="texto">
-                    Son lo opuesto a las regiones de tipo I y por lo tanto continuas en y. Es decir, en y, tenemos un intervalo
-                    definido (numeros). Mientras que en x, la región es limitada por funciones.
-                    Graficamente, una región genérica de este tipo es asi:
+                   R es alguna región en el espacio tridimensional.
+                </div>
+                <div class="texto">
+                     f(x, y, z) es alguna función con valores escalares que tiene como entrada puntos en el espacio tridimensional.
+                 </div>
+                 <div class="texto">
+                     d, V,  es una unidad de volumen pequeña. En coordenadas cartesianas,
+                     se desarrolla como d V = dx, dy, dz.
+                 </div>
+                 <div class="texto">
+                    Usa una integral tridimensional cada vez que tengas la sensación de querer despedazar una región tridimensional en infinitos pedazos, asociar cada pedazo con un valor y luego sumar todo.
+                     Esto es sorprendentemente útil para encontrar el volumen de regiones tridimensionales al sumar todos los mini volúmenes dV.
                 </div>
                 <div class="imagen">
-                    <p style="text-align: center; "> <img src="../../imagenes/unidad 3/tipo1.JPG" alt="imagen 1"></p>
-                <br>
+                    <p style="text-align: center; "> <img src="../../imagenes/unidad 3/ej1.JPG"
+                            alt="imagen 1"></p>
+                </div>
+
 
 
         </section>
@@ -108,9 +102,9 @@
                         <br>
                         <li><a href="../../temas/unidad3/integral.html">Integral doble y triple</a></li>
                         <br>
-                        <li><a href="../../temas/unidad3/regiones.html">Area de regiones generales</a></li>
+                        <li><a href="">Area de regiones generales</a></li>
                         <br>
-                        <li><a href="../../temas/unidad3/volumenes.html">Volumenes</a></li>
+                        <li><a href="">Volumenes</a></li>
                         <br>
                         <p class="unidad">Unidad 4</p>
                         <br>
