--- a/referencias.html
+++ b/referencias.html
@@ -201,6 +201,14 @@
                     <br>
                     <li>Area de regiones generales</li>
                     <br>
+                    <p class="link"><a href="https://www.calculisto.com/topics/integrales-dobles/summary/613">
+                        Integrales dobles sobre regiones generales | Calculisto - Resúmenes y Clases de Cálculo. (s. f.). Recuperado 14 de abril de 2021
+                        </a></p>
+                    <br>
+                    <p class="link"><a href="https://es.khanacademy.org/math/multivariable-calculus/integrating-multivariable-functions/double-integrals-a/a/double-integrals-over-non-rectangular-regions">
+                        Integrales dobles sobre regiones que no son rectangulares (artículo). (s. f.). Recuperado 14 de abril de 2021.
+                        </a></p>
+                        <br>
                     <li>Volumenes</li>
                     <br>
                     <p class="unidad">Unidad 4</p>
