--- a/referencias.html
+++ b/referencias.html
@@ -211,6 +211,13 @@
                         <br>
                     <li>Volumenes</li>
                     <br>
+                    <p class="link"><a href="https://sites.google.com/site/portafolioraulalcantar/cuarto-parcial/integral-triple">
+                        Integral triple - Portafolio de Cálculo Vectorial de Raúl Alcántar Peñaloza. (s. f.). Recuperado 14 de abril de 2021.
+                        </a></p>
+                        <p class="link"><a href="https://es.khanacademy.org/math/multivariable-calculus/integrating-multivariable-functions/triple-integrals-topic/a/triple-integrals">
+                            Integrales triples (artículo). (s. f.). Recuperado 14 de abril de 2021.
+                            </a></p>
+                    <br>
                     <p class="unidad">Unidad 4</p>
                     <br>
                     <li>Ecuaciones paramétricas </li>
