--- a/temario.html
+++ b/temario.html
@@ -53,15 +53,15 @@
                     <br>
                     <li><a href="temas/unidad3/regiones.html">Area de regiones generales</a></li>
                     <br>
-                    <li>Volumenes</li>
+                    <li><a href="temas/unidad3/volumenes.html">Volumenes</a></li>
                     <br>
                     <p class="unidad">Unidad 4</p>
                     <br>
-                    <li>Ecuaciones paramétricas </li>
+                    <li><a href="temas/unidad4/parametricas.html">Ecuaciones paramétricas </a></li>
                     <br>
-                    <li>Calculo en funciones vectoriales</li>
+                    <li><a href="temas/unidad4/funciones.html">Calculo en funciones vectoriales</a></li>
                     <br>
-                    <li>Integral en linea</li>
+                    <li><a href="temas/unidad4/linea.html">Integral en linea</a></li>
                 </ul>
     
             </div>
