--- a/temas/unidad4/funciones.html
+++ b/temas/unidad4/funciones.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Unidad 3</title>
+    <title>Unidad 4</title>
     <link rel="stylesheet" type="text/css" href="../../css/temas.css" />
 </head>
 
@@ -11,7 +11,7 @@
     <div id="general">
         <header id="header">
             <h1>
-                UNIDAD 3
+                UNIDAD 4
             </h1>
         </header>
         <nav id="menu">
@@ -25,43 +25,46 @@
             <div class="clearfix"></div>
         </nav>
         <section id="contenido">
-            <h1>VOLUMENES</h1>
+            <h1>CALCULO EN FUNCIONES VECTORIALES</h1>
             <div class="caja">
                 <div class="texto">
-                    A riesgo de sonar obvio, las integrales triples son
-                    como integrales dobles, pero en tres dimensiones. Están escritas de manera abstracta como
+                    Sistema de ecuaciones paramétricas permite representar una curva o superficie en el plano o en el espacio, 
+                    mediante valores que recorren un intervalo de números reales, mediante una variable ,
+                     llamada parámetro, considerando cada coordenada de un punto como una función dependiente del parámetro.
                 </div>
                 <div class="imagen">
-                    <p style="text-align: center; "> <img src="../../imagenes/unidad 3/integral volumen.JPG"
+                    <p style="text-align: center; "> <img src="../../imagenes/unidad 4/parametrica.JPG"
                             alt="imagen 1"></p>
                 </div>
                 <br>
                 <div class="texto">
-                    Graficamente representado como:
-                </div>
-                <div class="imagen">
-                    <p style="text-align: center; "> <img src="../../imagenes/unidad 3/grafico volumen.JPG"
-                            alt="imagen 1"></p>
+                    La definición de la derivada de una función de valor vectorial es casi idéntica a la definición de una
+                     función de valor real de una variable. Sin embargo, debido a que el rango de una función 
+                    con valor vectorial consiste en vectores, lo mismo es cierto para el rango de la derivada de una función con valor vectorial.
                 </div>
                 <div class="texto">
-                   R es alguna región en el espacio tridimensional.
-                </div>
-                <div class="texto">
-                     f(x, y, z) es alguna función con valores escalares que tiene como entrada puntos en el espacio tridimensional.
-                 </div>
-                 <div class="texto">
-                     d, V,  es una unidad de volumen pequeña. En coordenadas cartesianas,
-                     se desarrolla como d V = dx, dy, dz.
-                 </div>
-                 <div class="texto">
-                    Usa una integral tridimensional cada vez que tengas la sensación de querer despedazar una región tridimensional en infinitos pedazos, asociar cada pedazo con un valor y luego sumar todo.
-                     Esto es sorprendentemente útil para encontrar el volumen de regiones tridimensionales al sumar todos los mini volúmenes dV.
+                    La derivada de una funcion vectorial es:
                 </div>
                 <div class="imagen">
-                    <p style="text-align: center; "> <img src="../../imagenes/unidad 3/ej1.JPG"
+                    <p style="text-align: center; "> <img src="../../imagenes/unidad 4/vectorial.JPG"
                             alt="imagen 1"></p>
                 </div>
-
+                <br>
+                <div class="texto">
+                    Recuerde que la derivada de una función de valor real puede
+                     interpretarse como la pendiente de una recta tangente o la tasa de cambio instantánea de la función. 
+                </div>
+                <div class="texto">
+                    La derivada de una función de valor vectorial también puede entenderse como una tasa de cambio instantánea; por ejemplo,
+                     cuando la función representa
+                     la posición de un objeto en un punto dado en el tiempo, la derivada representa su velocidad en ese mismo punto en el tiempo.
+                </div>
+                <br>
+                <div class="imagen">
+                    <p style="text-align: center; "> <img src="../../imagenes/unidad 4/ej3.JPG"
+                            alt="imagen 1" width="600" height="300"></p>
+                </div>
+                
 
 
         </section>
@@ -108,9 +111,9 @@
                         <br>
                         <p class="unidad">Unidad 4</p>
                         <br>
-                        <li><a href="">Ecuaciones paramétricas</a></li>
+                        <li><a href="../../temas/unidad4/parametricas.html">Ecuaciones paramétricas</a></li>
                         <br>
-                        <li><a href="">Calculo en funciones vectoriales</a></li>
+                        <li><a href="../../temas/unidad4/funciones.html">Calculo en funciones vectoriales</a></li>
                         <br>
                         <li><a href="">Integral en linea</a></li>
                         <br>
