--- a/temas/unidad4/linea.html
+++ b/temas/unidad4/linea.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Unidad 3</title>
+    <title>Unidad 4</title>
     <link rel="stylesheet" type="text/css" href="../../css/temas.css" />
 </head>
 
@@ -11,7 +11,7 @@
     <div id="general">
         <header id="header">
             <h1>
-                UNIDAD 3
+                UNIDAD 4
             </h1>
         </header>
         <nav id="menu">
@@ -25,43 +25,33 @@
             <div class="clearfix"></div>
         </nav>
         <section id="contenido">
-            <h1>VOLUMENES</h1>
+            <h1>INTEGRALES EN LINEA</h1>
             <div class="caja">
                 <div class="texto">
-                    A riesgo de sonar obvio, las integrales triples son
-                    como integrales dobles, pero en tres dimensiones. Están escritas de manera abstracta como
+                    Las integrales de línea son útiles en física
+                     para calcular el trabajo que realiza una fuerza sobre un objeto en movimiento.
                 </div>
                 <div class="imagen">
-                    <p style="text-align: center; "> <img src="../../imagenes/unidad 3/integral volumen.JPG"
-                            alt="imagen 1"></p>
-                </div>
-                <br>
-                <div class="texto">
-                    Graficamente representado como:
-                </div>
-                <div class="imagen">
-                    <p style="text-align: center; "> <img src="../../imagenes/unidad 3/grafico volumen.JPG"
+                    <p style="text-align: center; "> <img src="../../imagenes/unidad 4/parametrica.JPG"
                             alt="imagen 1"></p>
                 </div>
                 <div class="texto">
-                   R es alguna región en el espacio tridimensional.
+                    Si parametrizas las curva de tal forma que te muevas en la dirección 
+                    opuesta conforme t crece, el valor de la integral de línea se multiplica por -1.
                 </div>
                 <div class="texto">
-                     f(x, y, z) es alguna función con valores escalares que tiene como entrada puntos en el espacio tridimensional.
-                 </div>
-                 <div class="texto">
-                     d, V,  es una unidad de volumen pequeña. En coordenadas cartesianas,
-                     se desarrolla como d V = dx, dy, dz.
-                 </div>
-                 <div class="texto">
-                    Usa una integral tridimensional cada vez que tengas la sensación de querer despedazar una región tridimensional en infinitos pedazos, asociar cada pedazo con un valor y luego sumar todo.
-                     Esto es sorprendentemente útil para encontrar el volumen de regiones tridimensionales al sumar todos los mini volúmenes dV.
+                    En el ejemplo anterior, el campo vectorial gravitacional es constante.
+                     En todos lados, la gravedad apunta directo hacia abajo con la misma magnitud. 
+                     Para la mayoría de las integrales de línea en un campo vectorial, los vectores del campo varían en diferentes putos del espacio, 
+                     por lo que el valor de su producto punto 
+                    con ds cambia. La siguiente animación muestra cómo se puede ver este producto.
                 </div>
                 <div class="imagen">
-                    <p style="text-align: center; "> <img src="../../imagenes/unidad 3/ej1.JPG"
+                    <p style="text-align: center; "> <img src="../../imagenes/unidad 4/rep.JPG"
                             alt="imagen 1"></p>
                 </div>
-
+            
+                
 
 
         </section>
@@ -108,9 +98,9 @@
                         <br>
                         <p class="unidad">Unidad 4</p>
                         <br>
-                        <li><a href="">Ecuaciones paramétricas</a></li>
+                        <li><a href="../../temas/unidad4/parametricas.html">Ecuaciones paramétricas</a></li>
                         <br>
-                        <li><a href="">Calculo en funciones vectoriales</a></li>
+                        <li><a href="../../temas/unidad4/funciones.html">Calculo en funciones vectoriales</a></li>
                         <br>
                         <li><a href="">Integral en linea</a></li>
                         <br>
