--- a/referencias.html
+++ b/referencias.html
@@ -88,9 +88,11 @@
                             Estimados Estadisticos. (2015, 26 mayo). Limite y continuidad de una función. YouTube. </a>
                     </p>
                     <br>
-                    <p class="link"><a href="https://www.calculisto.com/topics/funciones-de-varias-variables/summary/219">
-                        Continuidad | Calculisto - Resúmenes y Clases de Cálculo. (s. f.). Recuperado 12 de abril de 2021.
-                    </a>
+                    <p class="link"><a
+                            href="https://www.calculisto.com/topics/funciones-de-varias-variables/summary/219">
+                            Continuidad | Calculisto - Resúmenes y Clases de Cálculo. (s. f.). Recuperado 12 de abril de
+                            2021.
+                        </a>
                     </p>
 
 
@@ -101,73 +103,90 @@
                     <br>
                     <li>La derivada parcial</li>
                     <br>
-                    <p class="link"><a href="https://es.khanacademy.org/math/multivariable-calculus/multivariable-derivatives/partial-derivative-and-gradient-articles/a/introduction-to-partial-derivatives">
-                        Introducción a las derivadas parciales (artículo). (s. f.). Recuperado 13 de abril de 2021.
-                    </a>
+                    <p class="link"><a
+                            href="https://es.khanacademy.org/math/multivariable-calculus/multivariable-derivatives/partial-derivative-and-gradient-articles/a/introduction-to-partial-derivatives">
+                            Introducción a las derivadas parciales (artículo). (s. f.). Recuperado 13 de abril de 2021.
+                        </a>
                     </p>
                     <br>
-                    <p class="link"><a href="https://www.universoformulas.com/matematicas/analisis/derivadas-parciales/">
-                        Serra, B. R. (2020, noviembre 12). Derivadas parciales. Recuperado 13 de abril de 2021.
-                    </a>
+                    <p class="link"><a
+                            href="https://www.universoformulas.com/matematicas/analisis/derivadas-parciales/">
+                            Serra, B. R. (2020, noviembre 12). Derivadas parciales. Recuperado 13 de abril de 2021.
+                        </a>
                     </p>
                     <br>
-                    <p class="link"><a href="https://sites.google.com/site/carreradevidaguillermocova/home/unidad-ii-derivada/la-derivada-como-razon-de-cambio-instantanea">
-                        La derivada como razón de cambio instantánea - Cálculo Diferencial Profr. Guillermo CoVa. (s. f.). Recuperado 13 de abril de 2021.
-                    </a>
+                    <p class="link"><a
+                            href="https://sites.google.com/site/carreradevidaguillermocova/home/unidad-ii-derivada/la-derivada-como-razon-de-cambio-instantanea">
+                            La derivada como razón de cambio instantánea - Cálculo Diferencial Profr. Guillermo CoVa.
+                            (s. f.). Recuperado 13 de abril de 2021.
+                        </a>
                     </p>
                     <br>
-                    <p class="link"><a href="https://sites.google.com/site/iqiandrade/tercer-parcial/la-derivada-como-una-razon-de-cambio">
-                        La derivada como una razón de cambio - Portafolio digital de Matemáticas 1. (s. f.). Recuperado 13 de abril de 2021.
-                    </a>
+                    <p class="link"><a
+                            href="https://sites.google.com/site/iqiandrade/tercer-parcial/la-derivada-como-una-razon-de-cambio">
+                            La derivada como una razón de cambio - Portafolio digital de Matemáticas 1. (s. f.).
+                            Recuperado 13 de abril de 2021.
+                        </a>
                     </p>
                     <br>
                     <p class="link"><a href="https://www.sangakoo.com/es/temas/derivadas-parciales">
-                        Maths, S. (s. f.). Derivadas parciales. Recuperado 13 de abril de 2021.
-                    </a>
+                            Maths, S. (s. f.). Derivadas parciales. Recuperado 13 de abril de 2021.
+                        </a>
                     </p>
                     <br>
                     <p class="link"><a href="https://sites.google.com/site/calculovectorialhakim/derivadas-parciales">
-                        Derivadas parciales - Diario de Cálculo Vectorial. (s. f.). Recuperado 13 de abril de 2021.
+                            Derivadas parciales - Diario de Cálculo Vectorial. (s. f.). Recuperado 13 de abril de 2021.
                     </p>
                     <br>
                     <p class="link"><a href="https://www.analyzemath.com/spanish/calculus/Differentiation/rules.html">
-                        Reglas de Diferenciación de Funciones en Cálculo. (s. f.). Recuperado 13 de abril de 2021
+                            Reglas de Diferenciación de Funciones en Cálculo. (s. f.). Recuperado 13 de abril de 2021
                     </p>
                     <br>
-                    <p class="link"><a href="https://sites.google.com/site/frabicaciondelatasdecervezam2/3-contenidos/derivacion-parcial-implicita">
-                        Derivación parcial implicita - Fabricación de latas de cerveza m2. (s. f.). Recuperado 13 de abril de 2021.
+                    <p class="link"><a
+                            href="https://sites.google.com/site/frabicaciondelatasdecervezam2/3-contenidos/derivacion-parcial-implicita">
+                            Derivación parcial implicita - Fabricación de latas de cerveza m2. (s. f.). Recuperado 13 de
+                            abril de 2021.
                     </p>
                     <br>
                     <p class="link"><a href="https://www.fisicalab.com/apartado/regla-cadena">
-                        Regla de la cadena-Fisicalab. (s. f.). Recuperado 13 de abril de 2021.
+                            Regla de la cadena-Fisicalab. (s. f.). Recuperado 13 de abril de 2021.
                     </p>
                     <br>
                     <li>Vector gradiente y derivada direccional</li>
                     <br>
-                    <p class="link"><a href="https://es.khanacademy.org/math/multivariable-calculus/multivariable-derivatives/partial-derivative-and-gradient-articles/a/the-gradient">
-                        El gradiente (artículo). (s. f.). Recuperado 13 de abril de 2021.
+                    <p class="link"><a
+                            href="https://es.khanacademy.org/math/multivariable-calculus/multivariable-derivatives/partial-derivative-and-gradient-articles/a/the-gradient">
+                            El gradiente (artículo). (s. f.). Recuperado 13 de abril de 2021.
                     </p>
                     <br>
-                    <p class="link"><a href="https://es.khanacademy.org/math/multivariable-calculus/multivariable-derivatives/partial-derivative-and-gradient-articles/a/directional-derivative-introduction">
-                        Las derivadas direccionales (introducción) (artículo). (s. f.). Recuperado 13 de abril de 2021.
+                    <p class="link"><a
+                            href="https://es.khanacademy.org/math/multivariable-calculus/multivariable-derivatives/partial-derivative-and-gradient-articles/a/directional-derivative-introduction">
+                            Las derivadas direccionales (introducción) (artículo). (s. f.). Recuperado 13 de abril de
+                            2021.
                     </p>
                     <br>
-                    <p class="link"><a href="https://sites.google.com/site/calculovectorial2015lp1/3er-parcial/vector-gradiente">
-                        Vector gradiente - Calculo Vectorial. (s. f.). Recuperado 13 de abril de 2021.
+                    <p class="link"><a
+                            href="https://sites.google.com/site/calculovectorial2015lp1/3er-parcial/vector-gradiente">
+                            Vector gradiente - Calculo Vectorial. (s. f.). Recuperado 13 de abril de 2021.
                     </p>
                     <br>
-                    <p class="link"><a href="http://prometeo.matem.unam.mx/recursos/Licenciatura/UNADM_Adapt//scorm_player/1212/content/escenas/2_Inicio_1.html">
-                        DEFINICION ALGEBRAICA DE DERIVADA DIRECCIONAL. (s. f.). Recuperado 13 de abril de 2021.
+                    <p class="link"><a
+                            href="http://prometeo.matem.unam.mx/recursos/Licenciatura/UNADM_Adapt//scorm_player/1212/content/escenas/2_Inicio_1.html">
+                            DEFINICION ALGEBRAICA DE DERIVADA DIRECCIONAL. (s. f.). Recuperado 13 de abril de 2021.
                     </p>
                     <br>
                     <li>Extremos de funciones multivariables</li>
                     <br>
-                    <p class="link"><a href="https://sites.google.com/site/calculovectorial2015lp1/3er-parcial/extremos-de-funciones-de-varias-variables">
-                        Extremos de funciones de varias variables - Calculo Vectorial. (s. f.). Recuperado 13 de abril de 2021.
+                    <p class="link"><a
+                            href="https://sites.google.com/site/calculovectorial2015lp1/3er-parcial/extremos-de-funciones-de-varias-variables">
+                            Extremos de funciones de varias variables - Calculo Vectorial. (s. f.). Recuperado 13 de
+                            abril de 2021.
                     </p>
                     <br>
-                    <p class="link"><a href="https://www.matesfacil.com/UNI/varias_variables/extremos/extremos-varias-variables.html">
-                        EXTREMOS: MAXIMOS, MINIMOS, PUNTOS CRITICOS, DE INFLEXION: FUNCIONES DE VARIAS VARIABLES: CALCULO DIFERENCIAL: UNIVERSIDAD. (s. f.). Recuperado 13 de abril de 2021.
+                    <p class="link"><a
+                            href="https://www.matesfacil.com/UNI/varias_variables/extremos/extremos-varias-variables.html">
+                            EXTREMOS: MAXIMOS, MINIMOS, PUNTOS CRITICOS, DE INFLEXION: FUNCIONES DE VARIAS VARIABLES:
+                            CALCULO DIFERENCIAL: UNIVERSIDAD. (s. f.). Recuperado 13 de abril de 2021.
                         </a></p>
                     <br>
 
@@ -181,50 +200,80 @@
                     <br>
                     <li>Integral doble y triple</li>
                     <br>
-                    <p class="link"><a href="https://www.giematic.unican.es/index.php/integracion-multiple/triple-sobre-cajas/calculo-integrales-iteradas">
-                        Cálculo. Integrales iteradas. (s. f.). Recuperado 13 de abril de 2021.
+                    <p class="link"><a
+                            href="https://www.giematic.unican.es/index.php/integracion-multiple/triple-sobre-cajas/calculo-integrales-iteradas">
+                            Cálculo. Integrales iteradas. (s. f.). Recuperado 13 de abril de 2021.
                         </a></p>
-                        <br>
-                        <p class="link"><a href="https://sites.google.com/site/integralesdobles1/integral-doble/integral-iterada">
+                    <br>
+                    <p class="link"><a
+                            href="https://sites.google.com/site/integralesdobles1/integral-doble/integral-iterada">
                             Integral Iterada - INTEGRALES DOBLES. (s. f.). Recuperado 13 de abril de 2021.
-                            </a></p>
+                        </a></p>
                     <br>
                     <br>
-                        <p class="link"><a href="https://es.khanacademy.org/math/multivariable-calculus/integrating-multivariable-functions/double-integrals-a/a/double-integrals">
+                    <p class="link"><a
+                            href="https://es.khanacademy.org/math/multivariable-calculus/integrating-multivariable-functions/double-integrals-a/a/double-integrals">
                             Integrales dobles (artículo). (s. f.). Recuperado 13 de abril de 2021.
-                            </a></p>
+                        </a></p>
                     <br>
                     <br>
-                        <p class="link"><a href="https://www.youtube.com/watch?v=i5A_sjgo5hk">
-                            Agustin. (2015, 19 febrero). Cálculo de integrales dobles usando el teorema de Fubini. YouTube
-                            </a></p>
+                    <p class="link"><a href="https://www.youtube.com/watch?v=i5A_sjgo5hk">
+                            Agustin. (2015, 19 febrero). Cálculo de integrales dobles usando el teorema de Fubini.
+                            YouTube
+                        </a></p>
                     <br>
                     <li>Area de regiones generales</li>
                     <br>
                     <p class="link"><a href="https://www.calculisto.com/topics/integrales-dobles/summary/613">
-                        Integrales dobles sobre regiones generales | Calculisto - Resúmenes y Clases de Cálculo. (s. f.). Recuperado 14 de abril de 2021
+                            Integrales dobles sobre regiones generales | Calculisto - Resúmenes y Clases de Cálculo. (s.
+                            f.). Recuperado 14 de abril de 2021
                         </a></p>
                     <br>
-                    <p class="link"><a href="https://es.khanacademy.org/math/multivariable-calculus/integrating-multivariable-functions/double-integrals-a/a/double-integrals-over-non-rectangular-regions">
-                        Integrales dobles sobre regiones que no son rectangulares (artículo). (s. f.). Recuperado 14 de abril de 2021.
+                    <p class="link"><a
+                            href="https://es.khanacademy.org/math/multivariable-calculus/integrating-multivariable-functions/double-integrals-a/a/double-integrals-over-non-rectangular-regions">
+                            Integrales dobles sobre regiones que no son rectangulares (artículo). (s. f.). Recuperado 14
+                            de abril de 2021.
                         </a></p>
-                        <br>
+                    <br>
                     <li>Volumenes</li>
                     <br>
-                    <p class="link"><a href="https://sites.google.com/site/portafolioraulalcantar/cuarto-parcial/integral-triple">
-                        Integral triple - Portafolio de Cálculo Vectorial de Raúl Alcántar Peñaloza. (s. f.). Recuperado 14 de abril de 2021.
+                    <p class="link"><a
+                            href="https://sites.google.com/site/portafolioraulalcantar/cuarto-parcial/integral-triple">
+                            Integral triple - Portafolio de Cálculo Vectorial de Raúl Alcántar Peñaloza. (s. f.).
+                            Recuperado 14 de abril de 2021.
                         </a></p>
-                        <p class="link"><a href="https://es.khanacademy.org/math/multivariable-calculus/integrating-multivariable-functions/triple-integrals-topic/a/triple-integrals">
-                            Integrales triples (artículo). (s. f.). Recuperado 14 de abril de 2021.
-                            </a></p>
                     <br>
+                    <p class="link"><a
+                            href="https://es.khanacademy.org/math/multivariable-calculus/integrating-multivariable-functions/triple-integrals-topic/a/triple-integrals">
+                            Integrales triples (artículo). (s. f.). Recuperado 14 de abril de 2021.
+                        </a></p>
+                    <br>
+
+
+
                     <p class="unidad">Unidad 4</p>
                     <br>
                     <li>Ecuaciones paramétricas </li>
                     <br>
+                    <p class="link"><a
+                        href="https://www.ecured.cu/Ecuaciones_param%C3%A9tricas">
+                        EcuRed. (s. f.). Ecuaciones paramétricas - EcuRed. Recuperado 14 de abril de 2021.
+                    </a></p>
+                    <br>
+                    <p class="link"><a
+                        href="https://sites.google.com/site/calculovectorial001/primer-parcial/ecuaciones-parametricas">
+                        Ecuaciones paramétricas - CALCULO VECTORIAL. (s. f.). Recuperado 14 de abril de 2021.
+                    </a></p>
+                <br>
+                    <br>
                     <li>Calculo en funciones vectoriales</li>
                     <br>
                     <li>Integral en linea</li>
+                    <br>
+                    <p class="link"><a
+                        href="https://es.khanacademy.org/math/multivariable-calculus/integrating-multivariable-functions/line-integrals-in-vector-fields-articles/a/line-integrals-in-a-vector-field">
+                        Integrales de línea en un campo vectorial (artículo). (s. f.). Recuperado 14 de abril de 2021.
+                    </a></p>
                 </ul>
 
             </div>
