--- a/temas/unidad4/parametricas.html
+++ b/temas/unidad4/parametricas.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Unidad 3</title>
+    <title>Unidad 4</title>
     <link rel="stylesheet" type="text/css" href="../../css/temas.css" />
 </head>
 
@@ -11,7 +11,7 @@
     <div id="general">
         <header id="header">
             <h1>
-                UNIDAD 3
+                UNIDAD 4
             </h1>
         </header>
         <nav id="menu">
@@ -25,43 +25,44 @@
             <div class="clearfix"></div>
         </nav>
         <section id="contenido">
-            <h1>VOLUMENES</h1>
+            <h1>ECUACIONES PARAMÉTRICAS</h1>
             <div class="caja">
                 <div class="texto">
-                    A riesgo de sonar obvio, las integrales triples son
-                    como integrales dobles, pero en tres dimensiones. Están escritas de manera abstracta como
+                    Sistema de ecuaciones paramétricas permite representar una curva o superficie en el plano o en el espacio, 
+                    mediante valores que recorren un intervalo de números reales, mediante una variable ,
+                     llamada parámetro, considerando cada coordenada de un punto como una función dependiente del parámetro.
                 </div>
                 <div class="imagen">
-                    <p style="text-align: center; "> <img src="../../imagenes/unidad 3/integral volumen.JPG"
+                    <p style="text-align: center; "> <img src="../../imagenes/unidad 4/parametrica.JPG"
                             alt="imagen 1"></p>
                 </div>
                 <br>
                 <div class="texto">
-                    Graficamente representado como:
-                </div>
-                <div class="imagen">
-                    <p style="text-align: center; "> <img src="../../imagenes/unidad 3/grafico volumen.JPG"
-                            alt="imagen 1"></p>
+                    REPRESENTACIONES PARAMETRICAS DE LA CURVA
                 </div>
                 <div class="texto">
-                   R es alguna región en el espacio tridimensional.
+                    La representación paramétrica de una curva en un espacio n-dimensional consiste en n funciones de una variable t que en este caso es la variable independiente o parámetro (habitualmente se considera que t es un número real 
+                    y que los puntos del espacio n-dimensional están representados por n coordenadas reales),
                 </div>
                 <div class="texto">
-                     f(x, y, z) es alguna función con valores escalares que tiene como entrada puntos en el espacio tridimensional.
-                 </div>
-                 <div class="texto">
-                     d, V,  es una unidad de volumen pequeña. En coordenadas cartesianas,
-                     se desarrolla como d V = dx, dy, dz.
-                 </div>
-                 <div class="texto">
-                    Usa una integral tridimensional cada vez que tengas la sensación de querer despedazar una región tridimensional en infinitos pedazos, asociar cada pedazo con un valor y luego sumar todo.
-                     Esto es sorprendentemente útil para encontrar el volumen de regiones tridimensionales al sumar todos los mini volúmenes dV.
+                    Se dice que un punto de la curva correspondiente a un valor t
+                     del intervalo es un punto ordinario si las derivadas de las funciones 
+                     paramétricas existen en y son continuas en ese punto y al menos una es distinta de 0.
+                      Si un arco de curva está compuesto solamente de puntos ordinarios se denomina suave.
+                </div>
+                <div class="texto">
+                    Por ejemplo, las funciones paramétricas de un
+                    círculo unitario con centro en el origen son x = cos t, y = sen t. 
                 </div>
                 <div class="imagen">
-                    <p style="text-align: center; "> <img src="../../imagenes/unidad 3/ej1.JPG"
+                    <p style="text-align: center; "> <img src="../../imagenes/unidad 4/ej1.JPG"
                             alt="imagen 1"></p>
                 </div>
-
+                <div class="imagen">
+                    <p style="text-align: center; "> <img src="../../imagenes/unidad 4/ej2.JPG"
+                            alt="imagen 1"></p>
+                </div>
+                
 
 
         </section>
@@ -108,7 +109,7 @@
                         <br>
                         <p class="unidad">Unidad 4</p>
                         <br>
-                        <li><a href="">Ecuaciones paramétricas</a></li>
+                        <li><a href="../../temas/unidad4/parametricas.html">Ecuaciones paramétricas</a></li>
                         <br>
                         <li><a href="">Calculo en funciones vectoriales</a></li>
                         <br>
