--- a/temas/unidad3/integral.html
+++ b/temas/unidad3/integral.html
@@ -180,15 +180,15 @@
                         <br>
                         <li><a href="../../temas/unidad3/regiones.html">Area de regiones generales</a></li>
                         <br>
-                        <li><a href="">Volumenes</a></li>
+                        <li><a href="../../temas/unidad3/volumenes.html">Volumenes</a></li>
                         <br>
                         <p class="unidad">Unidad 4</p>
                         <br>
-                        <li><a href="">Ecuaciones paramétricas</a></li>
+                        <li><a href="../../temas/unidad4/parametricas.html">Ecuaciones paramétricas</a></li>
                         <br>
-                        <li><a href="">Calculo en funciones vectoriales</a></li>
+                        <li><a href="../../temas/unidad4/funciones.html">Calculo en funciones vectoriales</a></li>
                         <br>
-                        <li><a href="">Integral en linea</a></li>
+                        <li><a href="../../temas/unidad4/linea.html">Integral en linea</a></li>
                         <br>
                     </ul>
                 </nav>
