--- a/temas/unidad4/parametricas.html
+++ b/temas/unidad4/parametricas.html
@@ -111,9 +111,9 @@
                         <br>
                         <li><a href="../../temas/unidad4/parametricas.html">Ecuaciones paramétricas</a></li>
                         <br>
-                        <li><a href="">Calculo en funciones vectoriales</a></li>
+                        <li><a href="../../temas/unidad4/funciones.html">Calculo en funciones vectoriales</a></li>
                         <br>
-                        <li><a href="">Integral en linea</a></li>
+                        <li><a href="../../temas/unidad4/linea.html">Integral en linea</a></li>
                         <br>
                     </ul>
                 </nav>
