--- a/referencias.html
+++ b/referencias.html
@@ -268,6 +268,11 @@
                     <br>
                     <li>Calculo en funciones vectoriales</li>
                     <br>
+                    <p class="link"><a
+                        href="https://calculo21.com/calculo-de-funciones-vectoriales/">
+                        Beltran, J. (2020, 27 abril). Cálculo de funciones vectoriales. Recuperado 14 de abril de 2021.
+                    </a></p>
+                    <br>
                     <li>Integral en linea</li>
                     <br>
                     <p class="link"><a
