--- a/temas/unidad1/funciones.html
+++ b/temas/unidad1/funciones.html
@@ -95,19 +95,19 @@
                         <br>
                         <p class="unidad">Unidad 3</p>
                         <br>
-                        <li><a href="">Integral doble y triple</a></li>
+                        <li><a href="../../temas/unidad3/integral.html">Integral doble y triple</a></li>
                         <br>
-                        <li><a href="">Area de regiones generales</a></li>
+                        <li><a href="../../temas/unidad3/regiones.html">Area de regiones generales</a></li>
                         <br>
-                        <li><a href="">Volumenes</a></li>
+                        <li><a href="../../temas/unidad3/volumenes.html">Volumenes</a></li>
                         <br>
                         <p class="unidad">Unidad 4</p>
                         <br>
-                        <li><a href="">Ecuaciones paramétricas</a></li>
+                        <li><a href="../../temas/unidad4/parametricas.html">Ecuaciones paramétricas</a></li>
                         <br>
-                        <li><a href="">Calculo en funciones vectoriales</a></li>
+                        <li><a href="../../temas/unidad4/funciones.html">Calculo en funciones vectoriales</a></li>
                         <br>
-                        <li><a href="">Integral en linea</a></li>
+                        <li><a href="../../temas/unidad4/linea.html">Integral en linea</a></li>
                         <br>
                     </ul>
                 </nav>
