--- a/temas/unidad4/linea.html
+++ b/temas/unidad4/linea.html
@@ -102,7 +102,7 @@
                         <br>
                         <li><a href="../../temas/unidad4/funciones.html">Calculo en funciones vectoriales</a></li>
                         <br>
-                        <li><a href="">Integral en linea</a></li>
+                        <li><a href="../../temas/unidad4/linea.html">Integral en linea</a></li>
                         <br>
                     </ul>
                 </nav>
